# patois-scraper

./: .gitignore  Cargo.toml  README.md
data/: phrontistery.json
src/: main.rs
